<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:layout_marginHorizontal="20dp"
tools:context="com.nmpm.vitour.Activity.LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:paddingTop="80sp"
        android:paddingBottom="80sp"
        android:text="ViTour"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="80sp"></TextView>
<TextView
    android:id="@+id/login_username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/email_phone"/>
<EditText
    android:id="@+id/edit_login_username"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:inputType="textShortMessage"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:background="@drawable/bg_edittext"/>

<TextView
    android:id="@+id/login_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/password"/>
<EditText
    android:id="@+id/edit_login_pasword"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:inputType="textPassword"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:background="@drawable/bg_edittext"/>

    <Button
        android:id="@+id/SignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF" />

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginVertical="15dp">
    <TextView
        android:id="@+id/toForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_toStartOf="@id/toSignUp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary" />
    <TextView
        android:id="@+id/toSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_up"
        android:onClick="Signup"
        android:textColor="@color/colorPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="Or"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@android:color/darker_gray"/>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/login_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_google"
            android:background="@color/background"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/login_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_facebook"
            android:background="@color/background"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

</LinearLayout>